--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,16 @@
 name: CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
     
 jobs:
   build:
     runs-on: ubuntu-lastest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Run a one-line script
       run: echo Hellow, world!
-      
+
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
