--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,6 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
-          sudo docker pull sahbi4ever/infra_actions
+          sudo docker pull sahbi4ever/infra
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 sahbi4ever/infra_actions
+          sudo docker run --rm -d -p 5000:5000 sahbi4ever/infra
